--- a/famBus.ipynb
+++ b/famBus.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -72,7 +72,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "Length: 953, dtype: bool>"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -125,7 +125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +134,7 @@
        "50"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -156,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +165,7 @@
        "95"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 58,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,17 +188,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
     "# in object type there will be comma values for writing an integer number greater than 999.\n",
-    "df_org['in_deezer_playlists'] = df_org['in_deezer_playlists'].str.replace(',', '', regex=True).astype(int)\n"
+    "df_org['in_deezer_playlists'] = df_org['in_deezer_playlists'].str.replace(',', '', regex=True).astype('int64')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 953 entries, 0 to 952\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                Non-Null Count  Dtype \n",
+      "---  ------                --------------  ----- \n",
+      " 0   track_name            953 non-null    object\n",
+      " 1   artist(s)_name        953 non-null    object\n",
+      " 2   artist_count          953 non-null    int64 \n",
+      " 3   released_year         953 non-null    int64 \n",
+      " 4   released_month        953 non-null    int64 \n",
+      " 5   released_day          953 non-null    int64 \n",
+      " 6   in_spotify_playlists  953 non-null    int64 \n",
+      " 7   in_spotify_charts     953 non-null    int64 \n",
+      " 8   streams               953 non-null    object\n",
+      " 9   in_apple_playlists    953 non-null    int64 \n",
+      " 10  in_apple_charts       953 non-null    int64 \n",
+      " 11  in_deezer_playlists   953 non-null    int64 \n",
+      " 12  in_deezer_charts      953 non-null    int64 \n",
+      " 13  bpm                   953 non-null    int64 \n",
+      " 14  mode                  953 non-null    object\n",
+      " 15  danceability_%        953 non-null    int64 \n",
+      " 16  valence_%             953 non-null    int64 \n",
+      " 17  energy_%              953 non-null    int64 \n",
+      " 18  acousticness_%        953 non-null    int64 \n",
+      " 19  instrumentalness_%    953 non-null    int64 \n",
+      " 20  liveness_%            953 non-null    int64 \n",
+      " 21  speechiness_%         953 non-null    int64 \n",
+      "dtypes: int64(18), object(4)\n",
+      "memory usage: 163.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_org.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +262,7 @@
        "645"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,17 +285,169 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 65,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>artists</th>\n",
+       "      <th>artist_count</th>\n",
+       "      <th>released_year</th>\n",
+       "      <th>released_month</th>\n",
+       "      <th>released_day</th>\n",
+       "      <th>in_spotify_playlists</th>\n",
+       "      <th>in_spotify_charts</th>\n",
+       "      <th>streams</th>\n",
+       "      <th>in_apple_playlists</th>\n",
+       "      <th>...</th>\n",
+       "      <th>in_deezer_charts</th>\n",
+       "      <th>bpm</th>\n",
+       "      <th>mode</th>\n",
+       "      <th>danceability_%</th>\n",
+       "      <th>valence_%</th>\n",
+       "      <th>energy_%</th>\n",
+       "      <th>acousticness_%</th>\n",
+       "      <th>instrumentalness_%</th>\n",
+       "      <th>liveness_%</th>\n",
+       "      <th>speechiness_%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>574</th>\n",
+       "      <td>Love Grows (Where My Rosemary Goes)</td>\n",
+       "      <td>Edison Lighthouse</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1970</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2877</td>\n",
+       "      <td>0</td>\n",
+       "      <td>211283228</td>\n",
+       "      <td>16</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>110</td>\n",
+       "      <td>Major</td>\n",
+       "      <td>53</td>\n",
+       "      <td>75</td>\n",
+       "      <td>69</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>17</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              track_name            artists  artist_count  \\\n",
+       "574  Love Grows (Where My Rosemary Goes)  Edison Lighthouse             1   \n",
+       "\n",
+       "     released_year  released_month  released_day  in_spotify_playlists  \\\n",
+       "574           1970               1             1                  2877   \n",
+       "\n",
+       "     in_spotify_charts    streams  in_apple_playlists  ...  in_deezer_charts  \\\n",
+       "574                  0  211283228                  16  ...                 0   \n",
+       "\n",
+       "     bpm   mode  danceability_% valence_%  energy_%  acousticness_%  \\\n",
+       "574  110  Major              53        75        69               7   \n",
+       "\n",
+       "     instrumentalness_%  liveness_%  speechiness_%  \n",
+       "574                   0          17              3  \n",
+       "\n",
+       "[1 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Change the datatype of stream from object to int\n",
-    "df_org['streams']=df_org[\"streams\"].astype(int)"
+    "df_org.loc[df_org['track_name'] == \"Love Grows (Where My Rosemary Goes)\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 953 entries, 0 to 952\n",
+      "Data columns (total 22 columns):\n",
+      " #   Column                Non-Null Count  Dtype \n",
+      "---  ------                --------------  ----- \n",
+      " 0   track_name            953 non-null    object\n",
+      " 1   artists               953 non-null    object\n",
+      " 2   artist_count          953 non-null    int64 \n",
+      " 3   released_year         953 non-null    int64 \n",
+      " 4   released_month        953 non-null    int64 \n",
+      " 5   released_day          953 non-null    int64 \n",
+      " 6   in_spotify_playlists  953 non-null    int64 \n",
+      " 7   in_spotify_charts     953 non-null    int64 \n",
+      " 8   streams               953 non-null    object\n",
+      " 9   in_apple_playlists    953 non-null    int64 \n",
+      " 10  in_apple_charts       953 non-null    int64 \n",
+      " 11  in_deezer_playlists   953 non-null    int64 \n",
+      " 12  in_deezer_charts      953 non-null    int64 \n",
+      " 13  bpm                   953 non-null    int64 \n",
+      " 14  mode                  953 non-null    object\n",
+      " 15  danceability_%        953 non-null    int64 \n",
+      " 16  valence_%             953 non-null    int64 \n",
+      " 17  energy_%              953 non-null    int64 \n",
+      " 18  acousticness_%        953 non-null    int64 \n",
+      " 19  instrumentalness_%    953 non-null    int64 \n",
+      " 20  liveness_%            953 non-null    int64 \n",
+      " 21  speechiness_%         953 non-null    int64 \n",
+      "dtypes: int64(18), object(4)\n",
+      "memory usage: 163.9+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_org.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Change the datatype of stream from object to int\n",
+    "df_org['streams']=df_org['streams'].astype('int64')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -317,7 +514,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
