--- a/famBus.ipynb
+++ b/famBus.ipynb
@@ -10507,45 +10507,123 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Density Distribution of Release Date"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 949 entries, 0 to 948\n",
-      "Data columns (total 23 columns):\n",
-      " #   Column                Non-Null Count  Dtype         \n",
-      "---  ------                --------------  -----         \n",
-      " 0   track_name            949 non-null    object        \n",
-      " 1   artists               949 non-null    object        \n",
-      " 2   artist_count          949 non-null    int64         \n",
-      " 3   released_year         949 non-null    int64         \n",
-      " 4   released_month        949 non-null    int64         \n",
-      " 5   released_day          949 non-null    int64         \n",
-      " 6   in_spotify_playlists  949 non-null    int64         \n",
-      " 7   in_spotify_charts     949 non-null    int64         \n",
-      " 8   streams               949 non-null    int64         \n",
-      " 9   in_apple_playlists    949 non-null    int64         \n",
-      " 10  in_apple_charts       949 non-null    int64         \n",
-      " 11  in_deezer_playlists   949 non-null    int64         \n",
-      " 12  in_deezer_charts      949 non-null    int64         \n",
-      " 13  bpm                   949 non-null    int64         \n",
-      " 14  mode                  949 non-null    object        \n",
-      " 15  danceability_%        949 non-null    int64         \n",
-      " 16  valence_%             949 non-null    int64         \n",
-      " 17  energy_%              949 non-null    int64         \n",
-      " 18  acousticness_%        949 non-null    int64         \n",
-      " 19  instrumentalness_%    949 non-null    int64         \n",
-      " 20  liveness_%            949 non-null    int64         \n",
-      " 21  speechiness_%         949 non-null    int64         \n",
-      " 22  release_date          949 non-null    datetime64[ns]\n",
-      "dtypes: datetime64[ns](1), int64(19), object(3)\n",
-      "memory usage: 170.7+ KB\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>track_name</th>\n",
+       "      <th>release_date</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Seven (feat. Latto) (Explicit Ver.)</td>\n",
+       "      <td>2023-07-14</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>LALA</td>\n",
+       "      <td>2023-03-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>vampire</td>\n",
+       "      <td>2023-06-30</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Cruel Summer</td>\n",
+       "      <td>2019-08-23</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>WHERE SHE GOES</td>\n",
+       "      <td>2023-05-18</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>944</th>\n",
+       "      <td>My Mind &amp; Me</td>\n",
+       "      <td>2022-11-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>945</th>\n",
+       "      <td>Bigger Than The Whole Sky</td>\n",
+       "      <td>2022-10-21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>946</th>\n",
+       "      <td>A Veces (feat. Feid)</td>\n",
+       "      <td>2022-11-03</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>947</th>\n",
+       "      <td>En La De Ella</td>\n",
+       "      <td>2022-10-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>948</th>\n",
+       "      <td>Alone</td>\n",
+       "      <td>2022-11-04</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>949 rows × 2 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              track_name release_date\n",
+       "0    Seven (feat. Latto) (Explicit Ver.)   2023-07-14\n",
+       "1                                   LALA   2023-03-23\n",
+       "2                                vampire   2023-06-30\n",
+       "3                           Cruel Summer   2019-08-23\n",
+       "4                         WHERE SHE GOES   2023-05-18\n",
+       "..                                   ...          ...\n",
+       "944                         My Mind & Me   2022-11-03\n",
+       "945            Bigger Than The Whole Sky   2022-10-21\n",
+       "946                 A Veces (feat. Feid)   2022-11-03\n",
+       "947                        En La De Ella   2022-10-20\n",
+       "948                                Alone   2022-11-04\n",
+       "\n",
+       "[949 rows x 2 columns]"
+      ]
+     },
+     "execution_count": 171,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -10553,7 +10631,7 @@
     "\n",
     "df_with_datetime['release_date'] = pd.to_datetime(df_with_datetime[['released_year', 'released_month', 'released_day']].astype(str).agg('-'.join, axis=1), errors='coerce')\n",
     "\n",
-    "df_with_datetime.info()"
+    "df_with_datetime[['track_name','release_date']]"
    ]
   },
   {
@@ -10602,6 +10680,52 @@
     "\n",
     "\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 172,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 949 entries, 0 to 948\n",
+      "Data columns (total 23 columns):\n",
+      " #   Column                Non-Null Count  Dtype         \n",
+      "---  ------                --------------  -----         \n",
+      " 0   track_name            949 non-null    object        \n",
+      " 1   artists               949 non-null    object        \n",
+      " 2   artist_count          949 non-null    int64         \n",
+      " 3   released_year         949 non-null    int64         \n",
+      " 4   released_month        949 non-null    int64         \n",
+      " 5   released_day          949 non-null    int64         \n",
+      " 6   in_spotify_playlists  949 non-null    int64         \n",
+      " 7   in_spotify_charts     949 non-null    int64         \n",
+      " 8   streams               949 non-null    int64         \n",
+      " 9   in_apple_playlists    949 non-null    int64         \n",
+      " 10  in_apple_charts       949 non-null    int64         \n",
+      " 11  in_deezer_playlists   949 non-null    int64         \n",
+      " 12  in_deezer_charts      949 non-null    int64         \n",
+      " 13  bpm                   949 non-null    int64         \n",
+      " 14  mode                  949 non-null    object        \n",
+      " 15  danceability_%        949 non-null    int64         \n",
+      " 16  valence_%             949 non-null    int64         \n",
+      " 17  energy_%              949 non-null    int64         \n",
+      " 18  acousticness_%        949 non-null    int64         \n",
+      " 19  instrumentalness_%    949 non-null    int64         \n",
+      " 20  liveness_%            949 non-null    int64         \n",
+      " 21  speechiness_%         949 non-null    int64         \n",
+      " 22  release_date          949 non-null    datetime64[ns]\n",
+      "dtypes: datetime64[ns](1), int64(19), object(3)\n",
+      "memory usage: 170.7+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df_with_datetime.info()"
    ]
   }
  ],
