Shyam's Graph added

--- a/famBus.ipynb
+++ b/famBus.ipynb
@@ -9909,7 +9909,7 @@
     "df_copy['released_year'] = pd.to_datetime(df_copy['released_year'], format='%Y')\n",
     "\n",
     "# Group by 'released_year' and calculate the mean for each feature\n",
-    "features_to_analyze = ['danceability_%', 'valence_%' ]  # Add more features as needed\n",
+    "features_to_analyze = ['danceability_%', 'energy%' ]  # Add more features as needed\n",
     "mean_features_by_year = df_copy.groupby('released_year')[features_to_analyze].mean().reset_index()\n",
     "\n",
     "# Line plots for each feature\n",
@@ -10153,6 +10153,13 @@
     "# Display the trends\n",
     "print(platform_trends)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
