--- a/famBus.ipynb
+++ b/famBus.ipynb
@@ -6928,11 +6928,9 @@
    "source": [
     "df_copy['released_year'] = pd.to_datetime(df_copy['released_year'], format='%Y')\n",
     "\n",
-    "# Group by 'released_year' and calculate the mean for each feature\n",
-    "features_to_analyze = ['danceability_%', 'valence_%' ]  # Add more features as needed\n",
+    "features_to_analyze = ['danceability_%', 'valence_%' ]\n",
     "mean_features_by_year = df_copy.groupby('released_year')[features_to_analyze].mean().reset_index()\n",
     "\n",
-    "# Line plots for each feature\n",
     "plt.figure(figsize=(12, 6))\n",
     "\n",
     "for feature in features_to_analyze:\n",
