--- a/famBus.ipynb
+++ b/famBus.ipynb
@@ -6796,7 +6796,7 @@
     "\n",
     "plt.xlabel('Artists')\n",
     "plt.ylabel('Average Values')\n",
-    "plt.title('Average Values for Each Artist')\n",
+    "plt.title('Average Values for Top 10 Artist')\n",
     "plt.xticks(rotation = 90)\n",
     "plt.xticks(range(len(average_attributes.index)), average_attributes.index)\n",
     "\n",
