small markdown changes

--- a/famBus.ipynb
+++ b/famBus.ipynb
@@ -1099,7 +1099,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><h4> Filling NULL values of 'in_shazam_charts' with mean of 'in_spotify_charts', 'in_deezer_charts', 'in_apple_charts' </strong></h4>"
+    "<strong><h4> Filling NULL values of <i>in_shazam_charts</i> with mean of <i>in_spotify_charts, in_deezer_charts, in_apple_charts</i> </strong></h4>"
    ]
   },
   {
@@ -1132,7 +1132,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><h4> Finding rows with NULL values in <i>'key'</i> column</strong></h4> "
+    "<strong><h4> Finding rows with NULL values in <i>key</i> column</strong></h4> "
    ]
   },
   {
@@ -1497,7 +1497,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><h4>  In <i>'in_deezer_playlist'</i> (object type), there are comma values for integers greater than 999. Convert the entire column to integer</strong></h4> "
+    "<strong><h4>  In <i>in_deezer_playlist</i> (object type), there are comma values for integers greater than 999. Convert the entire column to integer</strong></h4> "
    ]
   },
   {
@@ -1560,7 +1560,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><h4> While analysing the data, we found discrepancy in <i>'streams'</i> column. It should be in int64 data type, while it is currently in object data type.</strong></h4>"
+    "<strong><h4> While analysing the data, we found discrepancy in <i>streams</i> column. It should be in int64 data type, while it is currently in object data type.</strong></h4>"
    ]
   },
   {
@@ -3396,7 +3396,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h4><strong>While trying to split the artists from 'artists' column, we encountered an error. On further analysing it, we found that the artists attribute of the song 'Nobody Like U - From \"Turning Red\"' contains unwanted characters</h4></strong>"
+    "<h4><strong>While trying to split the artists from <i>artists</i> column, we encountered an error. On further analysing it, we found that the artists attribute of the song 'Nobody Like U - From \"Turning Red\"' contains unwanted characters</h4></strong>"
    ]
   },
   {
@@ -3547,7 +3547,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5>Finding duplicate tracks by checking track name & artist. For duplicate tracks, we decided to keep the row with higher number of streams</h5>"
+    "<h5>Finding duplicate tracks by checking <i>track name</i> & <i>artist</i>. For duplicate tracks, we decided to keep the row with higher number of streams</h5>"
    ]
   },
   {
@@ -6836,7 +6836,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Query 7: Top Songs by Playlist"
+    "<h5><strong>Query 7: Top Songs by Playlist"
    ]
   },
   {
@@ -7070,7 +7070,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5><strong>Query 11: Single Artist vs Multiple Artists</h5></strong>"
+    "<h5><strong>Query 11: Single Artist v/s Multiple Artists</h5></strong>"
    ]
   },
   {
@@ -7165,7 +7165,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h5><strong>Dancebility%</h5></strong></center>\n"
+    "<center><h5><strong>Danceability %</h5></strong></center>\n"
    ]
   },
   {
@@ -7216,7 +7216,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h5><strong>Valence%</center></h5></strong>"
+    "<center><h5><strong>Valence %</center></h5></strong>"
    ]
   },
   {
@@ -7265,7 +7265,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h5><strong>Acousticeness_%"
+    "<center><h5><strong>Acousticness %"
    ]
   },
   {
@@ -7314,7 +7314,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h5><strong>Energy%"
+    "<center><h5><strong>Energy %"
    ]
   },
   {
@@ -7363,7 +7363,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h5><strong>Instrumentalness"
+    "<center><h5><strong>Instrumentalness %"
    ]
   },
   {
@@ -7412,7 +7412,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h5><strong>Liveness"
+    "<center><h5><strong>Liveness %"
    ]
   },
   {
@@ -7461,7 +7461,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h5><strong>Speechiness"
+    "<center><h5><strong>Speechiness %"
    ]
   },
   {
@@ -7509,7 +7509,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5><strong>Query 14: Most streamed key</h5></strong>"
+    "<h5><strong>Query 14: Most Streamed Key</h5></strong>"
    ]
   },
   {
@@ -7559,7 +7559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5><strong>Query 14:Count of the occurrences of each key in the 'key' column of the DataFrame</h5></strong>"
+    "<h5><strong>Query 14: Count of the occurrences of each key in the 'key' column of the DataFrame</h5></strong>"
    ]
   },
   {
