--- a/famBus.ipynb
+++ b/famBus.ipynb
@@ -9,16 +9,16 @@
    },
    "source": [
     "<div style=\"text-align:center\">\n",
-    "  <img title=\"a title\" alt=\"Alt text\" src=\"Spotify_I.png\" width=\"100px\">\n",
+    "  <img alt=\"Spotify\" src=\"Spotify_I.png\" width=\"100px\">\n",
     "</div>\n",
     "<div style=\"text-align:center\">\n",
-    "  <img title=\"a title\" alt=\"Alt text\" src=\"spotify_t.png\" width=\"400px\">\n",
+    "  <img alt=\"Spotify\" src=\"spotify_t.png\" width=\"400px\">\n",
     "</div>\n",
-    "\n",
-    "\n",
+    "<br>\n",
+    "<h2 style='font-weight: 500;line-height:0.3'>About Dataset</h2>\n",
     "<p align='justify' style='font-size:16px;line-height:1.3;'>This dataset contains a comprehensive list of the most famous songs of 2023 as listed on Spotify. The dataset offers a wealth of features beyond what is typically available in similar datasets. It provides insights into each song's attributes, popularity, and presence on various music platforms. The dataset includes information such as track name, artist(s) name, release date, Spotify playlists and charts, streaming statistics, Apple Music presence, Deezer presence, Shazam charts, and various audio features.</p>\n",
     "\n",
-    "\n",
+    "<br>\n",
     "<table align=\"center\">\n",
     "   <thead>\n",
     "    <tr style=\"background-color: #1DB954; font-size: 16px; text-align:center;\">\n",
@@ -125,7 +125,23 @@
     "      <td>Amount of spoken words in the song</td>\n",
     "    </tr>\n",
     "  </tbody>\n",
-    "</table>"
+    "</table>\n",
+    "<br>\n",
+    "<h2 style='font-weight: 500;line-height:0.3'>Objective/Aim</h2>\n",
+    "<ul style=\"line-height:150%;font-size:16px;list-style-type:square;\" >\n",
+    "<li>Content Analysis\n",
+    "<li>Playlist Popularity Analysis\n",
+    "<li>Chart Performance Analysis\n",
+    "<li>Genre and Mood Analysis\n",
+    "<li>User Engagement Trends\n",
+    "<li>Recommendation System Insights\n",
+    "</ul>\n",
+    "<br>\n",
+    "<h2 style='font-weight: 500;line-height:0.3'>Source of Data</h2>\n",
+    "<div>\n",
+    "  <a href='https://www.kaggle.com/datasets/nelgiriyewithana/top-spotify-songs-2023'> <img alt=\"Kaggle\" src=\"kaggle.png\" width=\"100px\">\n",
+    "</div>\n",
+    "<hr>"
    ]
   },
   {
