Some Markdown issue Fixed

--- a/famBus.ipynb
+++ b/famBus.ipynb
@@ -137,18 +137,57 @@
     "<li>Recommendation System Insights\n",
     "</ul>\n",
     "<br>\n",
-    "<h2 style='font-weight: 500;line-height:0.3'>Source of Data</h2>\n",
-    "<div>\n",
-    "  <a href='https://www.kaggle.com/datasets/nelgiriyewithana/top-spotify-songs-2023'> <img alt=\"Kaggle\" src=\"kaggle.png\" width=\"100px\">\n",
+    "<h2 style='font-weight: 500;line-height:0.3'>Team Members</h2>\n",
+    "<div style=\"display: flex; flex-wrap: wrap; justify-content: space-around;\">\n",
+    "\n",
+    "  <div style=\"width: 25%; margin: 10px; padding: 15px; border: 1px solid #1DB954; border-radius: 20px; text-align: center;\">\n",
+    "    <h3 style=\"font-weight: 500; line-height: 1.2;color:#1DB954;\">Noora Hussain</h3>\n",
+    "    <p style=\"line-height: 0;\">Roll No: 3402</p>\n",
+    "  </div>\n",
+    "\n",
+    "  <div style=\"width: 25%; margin: 10px; padding: 15px; border: 1px solid #1DB954; border-radius: 20px; text-align: center;\">\n",
+    "    <h3 style=\"font-weight: 500; line-height: 1.2;color:#1DB954;\">Arun Krishna</h3>\n",
+    "    <p style=\"line-height: 0;\">Roll No: 3406</p>\n",
+    "  </div>\n",
+    "\n",
+    "  <div style=\"width: 25%; margin: 10px; padding: 15px; border: 1px solid #1DB954; border-radius: 20px; text-align: center;\">\n",
+    "    <h3 style=\"font-weight: 500; line-height: 1.2;color:#1DB954;\">Muhammed Efas</h3>\n",
+    "    <p style=\"line-height: 0;\">Roll No: 3411</p>\n",
+    "  </div>\n",
+    "\n",
+    "  <div style=\"width: 25%; margin: 10px; padding: 15px; border: 1px solid #1DB954; border-radius: 20px; text-align: center;\">\n",
+    "    <h3 style=\"font-weight: 500; line-height: 1.2;color:#1DB954\">Shyam Kiran</h3>\n",
+    "    <p style=\"line-height: 0;\">Roll No: 3414</p>\n",
+    "  </div>\n",
+    "\n",
+    "  <div style=\"width: 25%; margin: 10px; padding: 15px; border: 1px solid #1DB954; border-radius: 20px; text-align: center;\">\n",
+    "    <h3 style=\"font-weight: 500; line-height: 1.2;color:#1DB954;\">Ashwin Venugopal</h3>\n",
+    "    <p style=\"line-height: 0;\">Roll No: 3424</p>\n",
+    "  </div>\n",
+    "\n",
+    "  <div style=\"width: 25%; margin: 10px; padding: 15px; border: 1px solid #1DB954; border-radius: 20px; text-align: center;\">\n",
+    "    <h3 style=\"font-weight: 500; line-height: 1.2;color:#1DB954;\">Aasim Abdul Majeed</h3>\n",
+    "    <p style=\"line-height: 0;\">Roll No: 3488</p>\n",
+    "  </div>\n",
+    "\n",
     "</div>\n",
-    "<hr>"
+    "<h2 style='font-weight: 500;line-height:0.3'>Source of Data</h2>\n",
+    "<div style='margin-left:40px'>\n",
+    "  <a href='https://www.kaggle.com/datasets/nelgiriyewithana/top-spotify-songs-2023'> <img alt=\"Kaggle\" src=\"kaggle.png\" width=\"100px\"></a>\n",
+    "</div>\n",
+    "<br>\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h3><strong>Importing the Necessary Library</strong></h3></center>"
+    "<center><h2><strong>Importing the Necessary Library</strong></h2></center>"
    ]
   },
   {
@@ -168,7 +207,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h3><strong>Loading the Data</strong></h3></center>"
+    "<center><h2><strong>Loading the Data</strong></h2></center>"
    ]
   },
   {
