italics and other spell check

--- a/famBus.ipynb
+++ b/famBus.ipynb
@@ -940,7 +940,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<li>The columns <i>'in_shazam_charts'</i> and <i>'key'</i> have NULL values.</li>"
+    "<li>The columns <i>in_shazam_charts</i> and <i>key</i> have NULL values.</li>"
    ]
   },
   {
@@ -1999,7 +1999,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<strong><h4>Change the datatype of <i>streams</i> from Object to Int</strong></h4>"
+    "<strong><h4>Change the datatype of <i>streams</i> from object to int</strong></h4>"
    ]
   },
   {
@@ -3459,7 +3459,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5>Finding duplicate tracks by checking <i>track name</i> & <i>artist</i>. For duplicate tracks, we decided to keep the row with higher number of streams</h5>"
+    "<h5>Finding duplicate tracks by checking <i>track name</i> & <i>artist</i>. For duplicate tracks, we decided to keep the row with higher number of <i>streams<i></h5>"
    ]
   },
   {
@@ -5912,7 +5912,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5><strong>Query 3: Artists present in most playlists</h5></strong>"
+    "<h5><strong>Query 3: Artists Present in Most Playlists</h5></strong>"
    ]
   },
   {
@@ -6358,7 +6358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<li>The Top 15 Artists follow similar patterns for instrumentalness"
+    "<li>The Top 15 Artists follow similar patterns for <i>instrumentalness</i>."
    ]
   },
   {
@@ -6542,7 +6542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -6702,7 +6702,7 @@
        "238     WizKid, Toian, Metro Boomin, Don Toliver, Beam  32761689  "
       ]
      },
-     "execution_count": 66,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6714,7 +6714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -6746,7 +6746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -6793,7 +6793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -6892,7 +6892,7 @@
        "[699 rows x 1 columns]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6905,7 +6905,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -6950,7 +6950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -7031,7 +7031,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -7090,7 +7090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -7138,7 +7138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -7184,7 +7184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -7233,7 +7233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -7279,7 +7279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -7288,7 +7288,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7330,7 +7330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
@@ -7339,7 +7339,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7379,7 +7379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -7388,7 +7388,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 61,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7428,7 +7428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -7437,7 +7437,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 62,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7477,7 +7477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -7486,7 +7486,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 63,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7526,7 +7526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
@@ -7535,7 +7535,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 64,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7575,7 +7575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -7584,7 +7584,7 @@
        "<function matplotlib.pyplot.show(close=None, block=None)>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 65,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -7623,7 +7623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -7668,12 +7668,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<h5><strong>Query 15: Count of the occurrences of each key in the 'key' column of the DataFrame</h5></strong>"
+    "<h5><strong>Query 15: Count of the occurrences of each key in the <i>key</i> column of the DataFrame</h5></strong>"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -7709,7 +7709,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h2> <b>Conclusion:</b></h2></center>\n",
+    "<center><h2> <b>Conclusion</b></h2></center>\n",
     "\n",
     "Our analysis of music streaming data in 2023 reveals some interesting patterns and trends. Here are the key takeaways:\n",
     "\n",
@@ -7745,7 +7745,7 @@
     "* Other keys show minimal variations in streaming numbers.\n",
     "* C# is also the most used key across the entire dataset.\n",
     "\n",
-    "### **Overall:**\n",
+    "### **Overall**\n",
     "\n",
     "Our analysis unveils valuable insights into music streaming preferences in 2023. Listeners seem to favor newer releases but also appreciate classics and social media-driven trends. Singing, major mode, and moderate energy levels resonate well, while instrumentalness, liveness, and speechiness play a smaller role. Specific years present unique trends in danceability, mood, and instrumentalness, suggesting evolving preferences over time. C# reigns supreme as the most streamed key, highlighting its popularity among artists and audiences.\n",
     "\n",
@@ -7769,7 +7769,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
