HTML and Concluion CSS Added

--- a/famBus.ipynb
+++ b/famBus.ipynb
@@ -27,7 +27,7 @@
     "    .para {\n",
     "      font-size: 16px;\n",
     "      line-height: 1.2;\n",
-    "      text-align: justify;\n",
+    "      text-align: justify-all;\n",
     "      transition: transform 250ms;\n",
     "    }\n",
     "\n",
@@ -51,10 +51,14 @@
     "      text-align: left; \n",
     "    }\n",
     "\n",
-    "    th {\n",
+    "    .mtable th {\n",
     "      background-color: #1DB954;\n",
     "      color: black;\n",
     "      font-size:15px; \n",
+    "    }\n",
+    "    th {\n",
+    "      background-color: #1DB954;\n",
+    " \n",
     "    }\n",
     "    \n",
     "    tr:nth-child(even) {\n",
@@ -7709,9 +7713,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class='conclusion'>\n",
     "<center><h2> <b>Conclusion</b></h2></center>\n",
     "\n",
-    "Our analysis of music streaming data in 2023 reveals some interesting patterns and trends. Here are the key takeaways:\n",
+    "<p class ='para'>Our analysis of music streaming data in 2023 reveals some interesting patterns and trends. Here are the key takeaways:<p>\n",
     "\n",
     "### **Popularity:**\n",
     "\n",
@@ -7745,12 +7750,46 @@
     "* Other keys show minimal variations in streaming numbers.\n",
     "* C# is also the most used key across the entire dataset.\n",
     "\n",
-    "### **Overall**\n",
     "\n",
-    "Our analysis unveils valuable insights into music streaming preferences in 2023. Listeners seem to favor newer releases but also appreciate classics and social media-driven trends. Singing, major mode, and moderate energy levels resonate well, while instrumentalness, liveness, and speechiness play a smaller role. Specific years present unique trends in danceability, mood, and instrumentalness, suggesting evolving preferences over time. C# reigns supreme as the most streamed key, highlighting its popularity among artists and audiences.\n",
+    "<div class='overallContainer'>\n",
+    "<h3 class='heading'>Overall Analysis</h3>\n",
+    "<p class= 'para indent'>Our analysis unveils valuable insights into music streaming preferences in 2023. Listeners seem to favor newer releases but also appreciate classics and social media-driven trends. Singing, major mode, and moderate energy levels resonate well, while instrumentalness, liveness, and speechiness play a smaller role. Specific years present unique trends in danceability, mood, and instrumentalness, suggesting evolving preferences over time. C# reigns supreme as the most streamed key, highlighting its popularity among artists and audiences.\n",
+    "</p>\n",
+    "<p class = 'para indent'>These findings offer valuable information for artists, music platforms, and anyone interested in understanding the current landscape of music streaming. They can be used to inform content creation, recommendation algorithms, and marketing strategies to better cater to listener preferences and drive engagement.</p>\n",
     "\n",
-    "These findings offer valuable information for artists, music platforms, and anyone interested in understanding the current landscape of music streaming. They can be used to inform content creation, recommendation algorithms, and marketing strategies to better cater to listener preferences and drive engagement.\n"
+    "</div>\n",
+    "</div>\n",
+    "<style>\n",
+    ".overallContainer{\n",
+    "      padding:2rem;\n",
+    "      background-color: #1DB954;\n",
+    "      border-radius:2rem;\n",
+    "      width:auto;  \n",
+    "    }\n",
+    ".heading{\n",
+    "      font-size:26px;\n",
+    "      font-weight:800;\n",
+    "    }\n",
+    ".para {\n",
+    "  font-size: 16px;\n",
+    "  text-align: justify;\n",
+    "}\n",
+    "p.indent {\n",
+    "    text-indent: 30px;\n",
+    "}\n",
+    ".conclusion{\n",
+    "  padding:1.5rem;\n",
+    "  border-radius:4rem;\n",
+    "  border: 1px solid #1DB954;\n",
+    "  width:auto;\n",
+    "}\n",
+    "</style>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
