Final changes made

--- a/famBus.ipynb
+++ b/famBus.ipynb
@@ -136,11 +136,11 @@
     "<body>\n",
     "\n",
     "  <div class=\"animation-container\">\n",
-    "    <img alt=\"Spotify\" src=\"Spotify_I.png\" width=\"100px\">\n",
+    "    <img alt=\"Spotify\" src=\"images/Spotify_I.png\" width=\"100px\">\n",
     "  </div>\n",
     "\n",
     "  <div class='animation-title' style=\"text-align:center\">\n",
-    "    <img alt=\"Spotify\" src=\"spotify_t.png\" width=\"400px\">\n",
+    "    <img alt=\"Spotify\" src=\"images/spotify_t.png\" width=\"400px\">\n",
     "  </div>\n",
     "\n",
     "\n",
@@ -261,8 +261,6 @@
     "  <ul>\n",
     "    <li onmouseover=\"this.style.transform='scale(1.1)';\" onmouseout=\"this.style.transform='scale(1)';\">Content Analysis</li>\n",
     "    <li onmouseover=\"this.style.transform='scale(1.1)';\" onmouseout=\"this.style.transform='scale(1)';\">Playlist Popularity Analysis</li>\n",
-    "    <li onmouseover=\"this.style.transform='scale(1.1)';\" onmouseout=\"this.style.transform='scale(1)';\">Chart Performance Analysis</li>\n",
-    "    <li onmouseover=\"this.style.transform='scale(1.1)';\" onmouseout=\"this.style.transform='scale(1)';\">Genre and Mood Analysis</li>\n",
     "    <li onmouseover=\"this.style.transform='scale(1.1)';\" onmouseout=\"this.style.transform='scale(1)';\">User Engagement Trends</li>\n",
     "    <li onmouseover=\"this.style.transform='scale(1.1)';\" onmouseout=\"this.style.transform='scale(1)';\">Recommendation System Insights</li>\n",
     "  </ul>\n",
@@ -300,7 +298,7 @@
     "  <h2 class='heading' onmouseover=\"this.style.transform='translateX(7px)';\" onmouseout=\"this.style.transform='translateX(0px)';\">Source of Data</h2>\n",
     "\n",
     "  <div class=\"source-container\" onmouseover=\"this.style.transform='translate(3px, -5px)';\" onmouseout=\"this.style.transform='translate(0, 0)';\">\n",
-    "    <a href='https://www.kaggle.com/datasets/nelgiriyewithana/top-spotify-songs-2023'> <img alt=\"Kaggle\" src=\"kaggle.png\" width=\"100px\"></a>\n",
+    "    <a href='https://www.kaggle.com/datasets/nelgiriyewithana/top-spotify-songs-2023'> <img alt=\"Kaggle\" src=\"images/kaggle.png\" width=\"100px\"></a>\n",
     "  </div>\n",
     "\n",
     "</body>\n",
@@ -422,7 +420,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><h3><strong> Descriptive Statistics of the Dataframe<strong> </h3></center>\n",
+    "<center><h2><strong> Descriptive Statistics of the Dataframe<strong> </h2></center>\n",
     "<h4> Quick overview of the distribution of the numerical data in the dataframe. This helps us in understanding key statistical measures for each colum </h4>"
    ]
   },
@@ -7768,7 +7766,7 @@
     "    }\n",
     ".heading{\n",
     "      font-size:26px;\n",
-    "      font-weight:800;\n",
+    "      font-weight:900;\n",
     "    }\n",
     ".para {\n",
     "  font-size: 16px;\n",
@@ -7779,7 +7777,7 @@
     "}\n",
     ".conclusion{\n",
     "  padding:1.5rem;\n",
-    "  border-radius:4rem;\n",
+    "  border-radius:3.5rem;\n",
     "  border: 1px solid #1DB954;\n",
     "  width:auto;\n",
     "}\n",
@@ -7808,7 +7806,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.0"
+   "version": "3.11.1"
   }
  },
  "nbformat": 4,
