--- a/famBus.ipynb
+++ b/famBus.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<center><img src=\"Documentation/famBus_synopsis.jpg\" ></img><center>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "tags": [
      "parameters"
