Final changes made and PDF Added to ipynb

--- a/famBus.ipynb
+++ b/famBus.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<center><img src=\"Documentation/famBus_synopsis.jpg\" ></img><center>"
+    "<center><img src=\"images/famBus_synopsis.jpg\" ></img><center>"
    ]
   },
   {
